[tool.poetry]
name = "class1"
version = "0.1.0"
description = ""
authors = ["MUHAMMAD HUZAIFA RIZWAN <huzaifa.rizwan99@ieee.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
